--- a/Clase01/ejercicio1/index.html
+++ b/Clase01/ejercicio1/index.html
@@ -22,8 +22,10 @@
 
     <h4>Otro Titulo Mas</h4>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla cum harum magnam illo molestiae, impedit labore molestias iste reprehenderit perferendis. Debitis amet nostrum et tempora ipsum iusto eaque voluptatum in!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ea a beatae ex! Laudantium sint incidunt accusamus suscipit veniam earum laborum, corporis eos error excepturi exercitationem harum nisi in, sapiente molestias possimus quod eligendi provident dicta doloribus deleniti natus cum nemo? Similique enim, optio, rem perferendis quibusdam facere nostrum, odio natus dicta excepturi asperiores porro sit non officia nisi. Perferendis, eaque repellat aliquam maxime, soluta quidem sit, tempore maiores sed architecto tenetur doloremque? Exercitationem alias ipsam sit, rerum quasi possimus dolorem et eaque explicabo minima distinctio deserunt vitae aliquid facilis? Minus rerum aliquam, aut doloribus explicabo delectus ab ex debitis velit magni in sequi consectetur non perspiciatis, itaque aliquid odit tempore. Nesciunt doloremque dicta nihil sunt? Temporibus omnis vero, nulla tempore iste reprehenderit! Exercitationem ullam debitis cumque dolorum corrupti unde impedit architecto laudantium incidunt ipsam, quidem omnis nihil doloribus tenetur laboriosam harum nam eveniet voluptatum earum provident placeat. Aperiam esse modi cupiditate deleniti! Recusandae quaerat officiis quisquam animi saepe obcaecati tempore beatae dolores sunt sequi? Autem facilis dignissimos itaque eveniet beatae! Neque, odio dolorum repellat velit voluptate, dolorem ullam modi non vitae facilis assumenda ex libero alias in. Aliquam ut veniam natus cumque quae dolorum dolorem est impedit consectetur quas?</p>
+
 
 </body>
-
-
 </html>
