--- a/Clase04/index.html
+++ b/Clase04/index.html
@@ -78,6 +78,8 @@
 
         <input type="submit" value="Enviar" class="botonEnviar">
     </form>
+
+    <div>Hola Mundo</div>
     
 
     <!-- input -->
