--- a/ProyectoFinal/pages/registrarse.html
+++ b/ProyectoFinal/pages/registrarse.html
@@ -16,60 +16,65 @@
             <i class="fas fa-film" aria-hidden="true"></i>
             <span>CAC-Movies</span>
         </a>
-       
     </header>
-    <main  id="main" class="main">
-      <section  data-aos="zoom-in"  data-aos-duration="1000" class="seccionRegistrarse">
-        <form  action="" method="post">
-            <h2 class="tituloRegistrarse">Registro</h2>
-            <div>
-                <input type="text" placeholder="Nombre" required id="nombre" name="nombre">
-            </div>
-            <div>
-                <input type="text" placeholder="Apellido" required id="apellido" name="apellido">
-            </div>
-            <div>
-                <input type="email" placeholder="Email" required id="email" name="email">
-            </div>
-            <div>
-                <input type="password" placeholder="Contraseña" required id="password" name="password">
-            </div>
-            <div>
-                <input type="date" placeholder="Fecha de Nacimiento (dd/mm/aaaa)" required id="fechaNacimiento" name="fechaNacimiento">
-            </div>
-            <div>
-                <select name="pais" id="pais">
-                    <option value="">País</option>
-                    <option value="AR">Argentina</option>
-                    <option value="BO">Bolivia</option>
-                    <option value="BR">Brasil</option>
-                    <option value="CH">Chile</option>
-                    <option value="CO">Colombia</option>
-                    <option value="EC">Ecuador</option>
-                    <option value="PY">Paraguay</option>
-                    <option value="PE">Perú</option>
-                    <option value="UY">Uruguay</option>
-                    <option value="VE">Venezuela</option>
-                </select>
-            </div>
-            <div class="terminos" >
-                <input class="check" type="checkbox" id="terminos">
-                <label class="textoCheck" for="terminos">Acepto términos y condiciones</label>
-            </div>
-            <div>
-                <input  class="boton" type="submit" value="Registrarse">
-            </div>
-           
-            <div > 
-                <a class="ayuda" href="#">Necesitas ayuda?</a>
-            </div>
-        </form>
-      </section>
-
+    <main id="main" class="main">
+        <section data-aos="zoom-in" data-aos-duration="1000" class="seccionRegistrarse">
+            <form action="" method="get">
+                <h2 class="tituloRegistrarse">Registro</h2>
+                <div>
+                    <input type="text" placeholder="Nombre"  id="nombre" name="nombre">
+                    <div class="error-text"></div>
+                </div>
+                <div>
+                    <input type="text" placeholder="Apellido"  id="apellido" name="apellido">
+                    <div class="error-text"></div>
+                </div>
+                <div>
+                    <input type="email" placeholder="Email"  id="email" name="email">
+                    <div class="error-text"></div>
+                </div>
+                <div>
+                    <input type="password" placeholder="Contraseña"  id="password" name="password">
+                    <div class="error-text"></div>
+                </div>
+                <div>
+                    <input type="date" placeholder="Fecha de Nacimiento (dd/mm/aaaa)"  id="fechaNacimiento" name="fechaNacimiento">
+                    <div class="error-text"></div>
+                </div>
+                <div>
+                    <select name="pais" id="pais">
+                        <option value="">País</option>
+                        <option value="AR">Argentina</option>
+                        <option value="BO">Bolivia</option>
+                        <option value="BR">Brasil</option>
+                        <option value="CH">Chile</option>
+                        <option value="CO">Colombia</option>
+                        <option value="EC">Ecuador</option>
+                        <option value="PY">Paraguay</option>
+                        <option value="PE">Perú</option>
+                        <option value="UY">Uruguay</option>
+                        <option value="VE">Venezuela</option>
+                    </select>
+                    <div class="error-text"></div>
+                </div>
+                <div class="terminos">
+                    <input class="check" type="checkbox" id="terminos">
+                    <label class="textoCheck" for="terminos">Acepto términos y condiciones</label>
+                    <div class="error-text"></div>
+                </div>
+                <div>
+                    <input class="boton" type="submit" value="Registrarse">
+                </div>
+                <div>
+                    <a class="ayuda" href="#">Necesitas ayuda?</a>
+                </div>
+            </form>
+        </section>
     </main>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-    AOS.init();
+        AOS.init();
     </script>
+   <script src="../js/valida_registrarse.js"></script>
 </body>
 </html>
